fix: update demo

--- a/src/Simples/ViewFaceCore.Demo.VideoForm/packages.config
+++ b/src/Simples/ViewFaceCore.Demo.VideoForm/packages.config
@@ -1,15 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Accord" version="3.8.0" targetFramework="net472" />
-  <package id="Accord.Controls" version="3.8.0" targetFramework="net472" />
-  <package id="Accord.Controls.Imaging" version="3.8.0" targetFramework="net472" />
-  <package id="Accord.Imaging" version="3.8.0" targetFramework="net472" />
-  <package id="Accord.MachineLearning" version="3.8.0" targetFramework="net472" />
-  <package id="Accord.Math" version="3.8.0" targetFramework="net472" />
-  <package id="Accord.Statistics" version="3.8.0" targetFramework="net472" />
-  <package id="Accord.Video" version="3.8.0" targetFramework="net472" />
-  <package id="Accord.Video.DirectShow" version="3.8.0" targetFramework="net472" />
-  <package id="System.Drawing.Common" version="6.0.0" targetFramework="net472" />
+  <package id="AForge" version="2.2.5" targetFramework="net472" />
+  <package id="AForge.Controls" version="2.2.5" targetFramework="net472" />
+  <package id="AForge.Imaging" version="2.2.5" targetFramework="net472" />
+  <package id="AForge.Math" version="2.2.5" targetFramework="net472" />
+  <package id="AForge.Video" version="2.2.5" targetFramework="net472" />
+  <package id="AForge.Video.DirectShow" version="2.2.5" targetFramework="net472" />
   <package id="ViewFaceCore" version="0.3.7" targetFramework="net472" />
   <package id="ViewFaceCore.all_models" version="6.0.7" targetFramework="net472" />
   <package id="ViewFaceCore.Extension.SystemDrawing" version="0.3.7" targetFramework="net472" />
@@ -31,5 +27,4 @@
   <package id="ViewFaceCore.runtime.win.vc" version="6.0.0" targetFramework="net472" />
   <package id="ViewFaceCore.runtime.win.x64" version="6.0.7" targetFramework="net472" />
   <package id="ViewFaceCore.runtime.win.x86" version="6.0.7" targetFramework="net472" />
-  <package id="ZedGraph" version="5.1.7" targetFramework="net472" />
 </packages>
