--- a/src/Examples/ViewFaceCore.Demo.VideoForm/packages.config
+++ b/src/Examples/ViewFaceCore.Demo.VideoForm/packages.config
@@ -6,6 +6,11 @@
   <package id="AForge.Math" version="2.2.5" targetFramework="net472" />
   <package id="AForge.Video" version="2.2.5" targetFramework="net472" />
   <package id="AForge.Video.DirectShow" version="2.2.5" targetFramework="net472" />
+  <package id="FreeSql" version="3.2.665" targetFramework="net472" />
+  <package id="FreeSql.DbContext" version="3.2.665" targetFramework="net472" />
+  <package id="FreeSql.Provider.Sqlite" version="3.2.665" targetFramework="net472" />
+  <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.116.0" targetFramework="net472" />
+  <package id="System.Data.SQLite.Core" version="1.0.116.0" targetFramework="net472" />
   <package id="ViewFaceCore" version="0.3.7" targetFramework="net472" />
   <package id="ViewFaceCore.all_models" version="6.0.7" targetFramework="net472" />
   <package id="ViewFaceCore.Extension.SystemDrawing" version="0.3.7" targetFramework="net472" />
