--- a/src/Examples/ViewFaceCore.Demo.ConsoleApp/ViewFaceCore.Example.ConsoleApp.csproj
+++ b/src/Examples/ViewFaceCore.Demo.ConsoleApp/ViewFaceCore.Example.ConsoleApp.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>disable</Nullable>
+    <Platforms>AnyCPU;x86;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
