--- a/src/Examples/ViewFaceCore.Demo.VideoForm/packages.config
+++ b/src/Examples/ViewFaceCore.Demo.VideoForm/packages.config
@@ -9,8 +9,31 @@
   <package id="FreeSql" version="3.2.665" targetFramework="net472" />
   <package id="FreeSql.DbContext" version="3.2.665" targetFramework="net472" />
   <package id="FreeSql.Provider.Sqlite" version="3.2.665" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration" version="6.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.FileExtensions" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Json" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.FileProviders.Physical" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.FileSystemGlobbing" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="6.0.0" targetFramework="net472" />
   <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.116.0" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Data.SQLite.Core" version="1.0.116.0" targetFramework="net472" />
+  <package id="System.IO" version="4.3.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net472" />
+  <package id="System.Text.Encodings.Web" version="6.0.0" targetFramework="net472" />
+  <package id="System.Text.Json" version="6.0.0" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
   <package id="ViewFaceCore" version="0.3.7" targetFramework="net472" />
   <package id="ViewFaceCore.all_models" version="6.0.7" targetFramework="net472" />
   <package id="ViewFaceCore.Extension.SystemDrawing" version="0.3.7" targetFramework="net472" />
