--- a/src/Examples/ViewFaceCore.Demo.WebApp/ViewFaceCore.Example.WebApp.csproj
+++ b/src/Examples/ViewFaceCore.Demo.WebApp/ViewFaceCore.Example.WebApp.csproj
@@ -4,6 +4,7 @@
 		<TargetFramework>net6.0</TargetFramework>
 		<Nullable>disable</Nullable>
 		<ImplicitUsings>disable</ImplicitUsings>
+		<Platforms>AnyCPU;x86;x64</Platforms>
 	</PropertyGroup>
 
 	<ItemGroup>
