--- a/src/Extensions/ViewFaceCore.Extension.SourceGenerators/ViewFaceCore.Extension.SourceGenerators.csproj
+++ b/src/Extensions/ViewFaceCore.Extension.SourceGenerators/ViewFaceCore.Extension.SourceGenerators.csproj
@@ -6,6 +6,14 @@
 		<LangVersion>latest</LangVersion>
 	</PropertyGroup>
 
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+	  <LangVersion>preview</LangVersion>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+	  <LangVersion>preview</LangVersion>
+	</PropertyGroup>
+
 	<!--PackageReference-->
 	<ItemGroup>
 		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.3.0" PrivateAssets="all" />
