fix: 源生成器测试

--- a/src/Tests/ConsoleApp1/ConsoleApp1.csproj
+++ b/src/Tests/ConsoleApp1/ConsoleApp1.csproj
@@ -5,6 +5,7 @@
 		<TargetFramework>net6.0</TargetFramework>
 		<ImplicitUsings>disable</ImplicitUsings>
 		<Nullable>disable</Nullable>
+		<Platforms>AnyCPU;x64;x86</Platforms>
 	</PropertyGroup>
 
 	<ItemGroup>
