--- a/src/Runtimes/ViewFaceCore.runtime.win.x64/ViewFaceCore.runtime.win.x64.csproj
+++ b/src/Runtimes/ViewFaceCore.runtime.win.x64/ViewFaceCore.runtime.win.x64.csproj
@@ -12,9 +12,9 @@
 		<None Include="..\..\Bridges\Windows\ViewFaceBridge\bin\$(Configuration)\x64\ViewFaceBridge.dll" Link="viewfacecore\win\x64\ViewFaceBridge.dll" CopyToOutputDirectory="PreserveNewest" />
 
 		<None Include="..\..\SeetaFace\index\build\bin\x64\tennis.dll" Link="viewfacecore\win\x64\tennis.dll" CopyToOutputDirectory="PreserveNewest" />
-		<None Include="..\..\SeetaFace\index\build\bin\x64\tennis_haswell.dll" Link="viewfacecore\win\x64\tennis_haswell.dll" CopyToOutputDirectory="PreserveNewest" />
-		<None Include="..\..\SeetaFace\index\build\bin\x64\tennis_pentium.dll" Link="viewfacecore\win\x64\tennis_pentium.dll" CopyToOutputDirectory="PreserveNewest" />
-		<None Include="..\..\SeetaFace\index\build\bin\x64\tennis_sandy_bridge.dll" Link="viewfacecore\win\x64\tennis_sandy_bridge.dll" CopyToOutputDirectory="PreserveNewest" />
+		<None Condition="Exists('..\..\SeetaFace\index\build\bin\x64\tennis_haswell.dll')" Include="..\..\SeetaFace\index\build\bin\x64\tennis_haswell.dll" Link="viewfacecore\win\x64\tennis_haswell.dll" CopyToOutputDirectory="PreserveNewest" />
+		<None Condition="Exists('..\..\SeetaFace\index\build\bin\x64\tennis_pentium.dll')" Include="..\..\SeetaFace\index\build\bin\x64\tennis_pentium.dll" Link="viewfacecore\win\x64\tennis_pentium.dll" CopyToOutputDirectory="PreserveNewest" />
+		<None Condition="Exists('..\..\SeetaFace\index\build\bin\x64\tennis_sandy_bridge.dll')" Include="..\..\SeetaFace\index\build\bin\x64\tennis_sandy_bridge.dll" Link="viewfacecore\win\x64\tennis_sandy_bridge.dll" CopyToOutputDirectory="PreserveNewest" />
 		<None Include="..\..\SeetaFace\index\build\bin\x64\SeetaAgePredictor600.dll" Link="viewfacecore\win\x64\SeetaAgePredictor600.dll" CopyToOutputDirectory="PreserveNewest" />
 		<None Include="..\..\SeetaFace\index\build\bin\x64\SeetaAuthorize.dll" Link="viewfacecore\win\x64\SeetaAuthorize.dll" CopyToOutputDirectory="PreserveNewest" />
 		<None Include="..\..\SeetaFace\index\build\bin\x64\SeetaEyeStateDetector200.dll" Link="viewfacecore\win\x64\SeetaEyeStateDetector200.dll" CopyToOutputDirectory="PreserveNewest" />
