fix: 优化ViewFaceCore.Extension.DependencyInjection

--- a/src/Extensions/ViewFaceCore.Extension.DependencyInjection/ViewFaceCore.Extension.DependencyInjection.csproj
+++ b/src/Extensions/ViewFaceCore.Extension.DependencyInjection/ViewFaceCore.Extension.DependencyInjection.csproj
@@ -36,7 +36,7 @@
 		<PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
 		<PackageIcon>WithSalt-Logo.png</PackageIcon>
 		<PackageProjectUrl>https://github.com/ViewFaceCore/ViewFaceCore</PackageProjectUrl>
-		<Description>ViewFaceCore 的 ImageSharp 实现。</Description>
+		<Description>ViewFaceCore 的依赖载入扩展。</Description>
 		<PackageReleaseNotes></PackageReleaseNotes>
 	</PropertyGroup>
 
