--- a/src/Examples/ViewFaceCore.Demo.ConsoleApp/ViewFaceCore.Example.ConsoleApp.csproj
+++ b/src/Examples/ViewFaceCore.Demo.ConsoleApp/ViewFaceCore.Example.ConsoleApp.csproj
@@ -9,9 +9,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ViewFaceCore" Version="0.3.7" />
+    <PackageReference Include="ViewFaceCore" Version="0.4.0-alpha1" />
     <PackageReference Include="ViewFaceCore.all_models" Version="6.0.7" />
-    <PackageReference Include="ViewFaceCore.Extension.SkiaSharp" Version="0.3.7" />
+    <PackageReference Include="ViewFaceCore.Extension.SkiaSharp" Version="0.4.0-alpha1" />
     <PackageReference Include="ViewFaceCore.runtime.linux.arm" Version="6.0.7" />
     <PackageReference Include="ViewFaceCore.runtime.linux.arm64" Version="6.0.7" />
     <PackageReference Include="ViewFaceCore.runtime.ubuntu.20.04.x64" Version="6.0.7" />
