--- a/src/Examples/ViewFaceCore.Demo.VideoForm/packages.config
+++ b/src/Examples/ViewFaceCore.Demo.VideoForm/packages.config
@@ -6,9 +6,9 @@
   <package id="AForge.Math" version="2.2.5" targetFramework="net472" />
   <package id="AForge.Video" version="2.2.5" targetFramework="net472" />
   <package id="AForge.Video.DirectShow" version="2.2.5" targetFramework="net472" />
-  <package id="FreeSql" version="3.2.665" targetFramework="net472" />
-  <package id="FreeSql.DbContext" version="3.2.665" targetFramework="net472" />
-  <package id="FreeSql.Provider.Sqlite" version="3.2.665" targetFramework="net472" />
+  <package id="FreeSql" version="3.2.669" targetFramework="net472" />
+  <package id="FreeSql.DbContext" version="3.2.669" targetFramework="net472" />
+  <package id="FreeSql.Provider.Sqlite" version="3.2.669" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration" version="6.0.1" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="6.0.0" targetFramework="net472" />
@@ -23,6 +23,7 @@
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Configuration.ConfigurationManager" version="6.0.0" targetFramework="net472" />
   <package id="System.Data.SQLite.Core" version="1.0.116.0" targetFramework="net472" />
+  <package id="System.Drawing.Common" version="5.0.3" targetFramework="net472" />
   <package id="System.IO" version="4.3.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.5" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
@@ -39,9 +40,9 @@
   <package id="System.Text.Json" version="6.0.5" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
-  <package id="ViewFaceCore" version="0.3.8" targetFramework="net472" />
+  <package id="ViewFaceCore" version="0.4.0-alpha1" targetFramework="net472" />
   <package id="ViewFaceCore.all_models" version="6.0.7" targetFramework="net472" />
-  <package id="ViewFaceCore.Extension.SystemDrawing" version="0.3.7" targetFramework="net472" />
+  <package id="ViewFaceCore.Extension.SystemDrawing" version="0.4.0-alpha1" targetFramework="net472" />
   <package id="ViewFaceCore.model.age_predictor" version="6.0.7" targetFramework="net472" />
   <package id="ViewFaceCore.model.eye_state" version="6.0.7" targetFramework="net472" />
   <package id="ViewFaceCore.model.face_detector" version="6.0.7" targetFramework="net472" />
