fix: 修复编译警告

--- a/src/Extensions/ViewFaceCore.Extension.SourceGenerators/ViewFaceCore.Extension.SourceGenerators.csproj
+++ b/src/Extensions/ViewFaceCore.Extension.SourceGenerators/ViewFaceCore.Extension.SourceGenerators.csproj
@@ -4,13 +4,22 @@
 		<TargetFramework>netstandard2.0</TargetFramework>
 		<IsPackable>false</IsPackable>
 		<LangVersion>latest</LangVersion>
+		<Platforms>AnyCPU;x64</Platforms>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
 	  <LangVersion>preview</LangVersion>
 	</PropertyGroup>
 
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+	  <LangVersion>preview</LangVersion>
+	</PropertyGroup>
+
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+	  <LangVersion>preview</LangVersion>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
 	  <LangVersion>preview</LangVersion>
 	</PropertyGroup>
 
