--- a/src/Tests/ConsoleAppGpuTest/ConsoleAppGpuTest.csproj
+++ b/src/Tests/ConsoleAppGpuTest/ConsoleAppGpuTest.csproj
@@ -5,6 +5,7 @@
 		<TargetFramework>net6.0</TargetFramework>
 		<ImplicitUsings>disable</ImplicitUsings>
 		<Nullable>disable</Nullable>
+		<Platforms>AnyCPU;x64</Platforms>
 	</PropertyGroup>
 
 	<ItemGroup>
