--- a/src/Tests/ViewFaceCoreSkiaSharpTest/ViewFaceCoreSkiaSharpTest.csproj
+++ b/src/Tests/ViewFaceCoreSkiaSharpTest/ViewFaceCoreSkiaSharpTest.csproj
@@ -6,6 +6,8 @@
 		<Nullable>disable</Nullable>
 
 		<IsPackable>false</IsPackable>
+
+		<Platforms>AnyCPU;x64</Platforms>
 	</PropertyGroup>
 
 	<ItemGroup>
